--- a/secciones/contacto.html
+++ b/secciones/contacto.html
@@ -43,11 +43,11 @@
               <input type="submit" value="Enviar info"/>
               <input type="reset" value="Borrar info"/> 
 
-              <div>Hombre</div>
+              <div class="genero"> <div>Hombre</div>
               <input type="radio" name="sexo" value="hombre">
               <div>Mujer</div>
               <input type="radio" name="sexo" value="mujer">
-
+              </div>
               <div>Acepta terminos y condiciones</div>
               <input type="checkbox" name="acepta" value="1">
 
