--- a/secciones/productos.html
+++ b/secciones/productos.html
@@ -41,10 +41,10 @@
 <img src="../img/san lorenzo.jpg" alt="Camiseta 3">
 <img src="../img/independiente.jpg" alt="Camiseta 4">
 <img src="../img/racing.jpg" alt="Camiseta 5"> </div> <br>
-<div class="parte2"><img src="../img/491.jpg" alt="">
-<img src="../img/499.jpg" alt=""> </div>
-<img src="../img/321.jpg" alt="">
-<img src="../img/385.jpg" alt="">
+<div class="parte2"><img src="../img/491.jpg" alt="Camiseta 6">
+<img src="../img/499.jpg" alt="Camiseta 7"> </div>
+<img src="../img/321.jpg" alt="Camiseta 8">
+<img src="../img/385.jpg" alt="Camiseta 9">
 </div>
 </figure>
 <!--fin figure-->
