--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
     <title>Ropa Deportiva</title>
 </head>
-<link rel="stylesheet" href="./estilos/estilos.css">
+<link rel="stylesheet" href="./estilos/style.css">
 <body>
 
     <div id="grilla">
@@ -77,13 +77,13 @@
     
  <!--inicio footer-->
 <h3>
-<footer> 
+<footer>  <div class="redesSociales">
    Facebook: DontStop <br> 
    Instagram: DontStop <br> 
-   <img src="./img/v982-d3-01 (2).jpg" alt="">
-   <img src="./img/v982-d3-01.jpg" alt="">
+   <div class="face"> <img  src="./img/v982-d3-01 (2).jpg" alt=""> </div>
+   <div class="ing"> <img  src="./img/v982-d3-01.jpg" alt=""> </div>
 
-    
+</div>
 </footer>
 
 </h3>
