--- a/secciones/servicios.html
+++ b/secciones/servicios.html
@@ -10,7 +10,7 @@
 <body>
 
     <!--inicio header-->
-    <header>
+    <header class="cabeza">
         <nav>
             <ul>
                 <li>
