--- a/secciones/productos.html
+++ b/secciones/productos.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <title>DontStop/productos</title>
 </head>
 <link rel="stylesheet" href="../estilos/estilos.css">
@@ -36,19 +37,28 @@
     <!--inicio figure-->
 <figure> 
     <div class="camisetas">
-<div class="parte1"><img src="../img/boca.jpg" alt="Camiseta 1">
-<img src="../img/river.jpg" alt="Camiseta 2">
-<img src="../img/san lorenzo.jpg" alt="Camiseta 3">
-<img src="../img/independiente.jpg" alt="Camiseta 4">
-<img src="../img/racing.jpg" alt="Camiseta 5"> </div> <br>
-<div class="parte2"><img src="../img/491.jpg" alt="Camiseta 6">
-<img src="../img/499.jpg" alt="Camiseta 7"> </div>
-<img src="../img/321.jpg" alt="Camiseta 8">
-<img src="../img/385.jpg" alt="Camiseta 9">
+<div class="parte1"><img src="../img/boca.jpg" class="img-fluid" alt="...">
+    <img src="../img/river.jpg" class="img-fluid" alt="...">
+    <img src="../img/san lorenzo.jpg" class="img-fluid" alt="...">
+    <img src="../img/independiente.jpg" class="img-fluid" alt="...">
+    <img src="../img/racing.jpg" class="img-fluid" alt="..."> </div> <br>
+<div class="parte2"><img src="../img/491.jpg" class="img-fluid" alt="...">
+    <img src="../img/499.jpg" class="img-fluid" alt="..."> </div>
+    <img src="../img/321.jpg" class="img-fluid" alt="...">
+    <img src="../img/385.jpg" class="img-fluid" alt="...">
 </div>
 </figure>
 <!--fin figure-->
 
+
+<div class="card" style="width: 18rem;">
+    <img src="../img/Camiseta-de-Argentina-2020-21 (1).jpg" class="card-img-top" alt="...">
+    <div class="card-body">
+      <h5 class="card-title">"La remera invicta"</h5>
+      <p class="card-text">Remera con la que la seleccion Argentina consiguio el invicto mas grande en su historia.</p>
+      <a href="https://bolavip.com/ar/seleccion/Adios-vaquera-el-invicto-de-la-camiseta-celeste-y-blanca-de-Argentina-20220602-0028.html" class="btn btn-primary">Ver historia de la remera</a>
+    </div>
+  </div>
 
 <!--inicio footer-->
 <h3>
@@ -61,6 +71,7 @@
     </h3>
      <!--fin footer-->
         
+     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     
 </body>
 </html>
