Actualizacion del proyecto

--- a/secciones/servicios.html
+++ b/secciones/servicios.html
@@ -58,9 +58,9 @@
     <footer>
         <div class="red-social">
             <h2>Siguenos!</h2>
-        <a href="https://www.facebook.com/dontstopargentina/" class="fa fa-facebook">FACEBOOK:dontstopargentina</a>
-        <a href="https://www.instagram.com/dontstopargentina/" class="fa fa-instagram">INSTAGRAM:dontstopargentina</a>
-        <a href="https://www.twitter.com/dontstopargentina/" class="fa fa-twitter">TWITTER:dontstopargentina</a>
+            <a href="https://www.facebook.com/dontstopargentina/" class="fa fa-facebook">Facebook:dontstopargentina</a>
+            <a href="https://www.instagram.com/dontstopargentina/" class="fa fa-instagram">Instagram:dontstopargentina</a>
+            <a href="https://www.twitter.com/dontstopargentina/" class="fa fa-twitter">Twitter:dontstopargentina</a>
         
         
         </div>
