--- a/secciones/productos.html
+++ b/secciones/productos.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Compra las mejores remeras de futbol de tus equipos favoritos para ser el mejor">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="estilos/estilos.css">
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
@@ -41,22 +42,33 @@
     <!--inicio figure-->
     
 <figure class="cami"> 
-    <div class="camisetas"> <h2>ARGENTINA <br>
+    <div class="camisetas"> <h2>Camisetas Argentina <br>
 <div class="camiseta"><img class="boca" src="../img/boca.jpg"  alt="...">
     <img class="river" src="../img/river.jpg"  alt="...">
     <img class="san" src="../img/san lorenzo.jpg"  alt="...">
     <img class="independiente" src="../img/independiente.jpg"  alt="..."> 
     <img class="racing" src="../img/racing.jpg"  alt="..."> </div> 
 </h2>
-    <h2>INGLATERRA <br>
+    <h2>Camisetas Inglaterra <br>
     <div class="remera">    <img class="arsenal" src="../img/Arsenal.jpg"  alt="">
         <img class="chelsea" src="../img/Chelsea.jpg"  alt="">
         <img class="liverpool" src="../img/liverpool.jpg" alt="">
         <img class="burnley" src="../img/Burnley.jpg"  alt="">
         <img class="west" src="../img/West.jpg"  alt=""> </div> 
-    </h2>
-</div> 
-    
+    </h2> 
+</div>  
+   <h2>Camisetas España <br>  
+<div class="casaca"> <img class="barcelona" src="../img/barcelona.jpg" alt="">
+    <img class="real" src="../img/real.jpg" alt="">
+    <img class="rayo" src="../img/rayo.jpg" alt="">
+    <img class="bilbao" src="../img/bilbao.jpg" alt="">
+    <img class="atletico" src="../img/atletico.jpg" alt="">
+
+
+
+
+</div>
+</h2>
 </div>
 </figure>
 
@@ -75,8 +87,8 @@
 <!--inicio footer-->
 
     <footer>
-        <div class="red-social">
-            <h2>Siguenos!</h2>
+        <div class="red_social">
+            <h3>Siguenos!</h3>
         <a href="https://www.facebook.com/dontstopargentina/" class="fa fa-facebook">Facebook:dontstopargentina</a>
         <a href="https://www.instagram.com/dontstopargentina/" class="fa fa-instagram">Instagram:dontstopargentina</a>
         <a href="https://www.twitter.com/dontstopargentina/" class="fa fa-twitter">Twitter:dontstopargentina</a>
