--- a/secciones/servicios.html
+++ b/secciones/servicios.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Compra las mejores remeras de futbol de tus equipos favoritos para ser el mejor">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="estilos/estilos.css">
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
@@ -37,7 +38,7 @@
     </header>
     <!--fin header-->
 
-    <h2>Buenos dias/tardes/noches, estas en el apartado de servicio al cliente. 
+    <h2>Hola, como estas?, te encontras en el apartado de servicio al cliente. 
         Estamos aqui para ayudar a aclarar ciertas dudas que puedan surgir o inconvenientes con el sitio web. 
         
     </h2>
@@ -56,8 +57,8 @@
 <!--inicio footer-->
 
     <footer>
-        <div class="red-social">
-            <h2>Siguenos!</h2>
+        <div class="red_social">
+            <h3>Siguenos!</h3>
             <a href="https://www.facebook.com/dontstopargentina/" class="fa fa-facebook">Facebook:dontstopargentina</a>
             <a href="https://www.instagram.com/dontstopargentina/" class="fa fa-instagram">Instagram:dontstopargentina</a>
             <a href="https://www.twitter.com/dontstopargentina/" class="fa fa-twitter">Twitter:dontstopargentina</a>
