Actualizacion del proyecto

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     <a href="./secciones/promociones.html">Promociones</a> &nbsp;
                 </li>
                 <li>
-                    <a href="./secciones/servicios.html">Servicios</a> &nbsp;
+                    <a href="./secciones/servicios.html">Amantes de las camisetas</a> &nbsp;
                 </li>
                 
                 
