--- a/secciones/productos.html
+++ b/secciones/productos.html
@@ -32,7 +32,7 @@
                     <a href="promociones.html">Promociones</a> &nbsp;
                 </li>
                 <li>
-                    <a href="servicios.html">Servicios</a> &nbsp;
+                    <a href="servicios.html">>Amantes de las camisetas</a> &nbsp;
                 </li>
             </ul>
         </nav>
@@ -43,26 +43,26 @@
     
 <figure class="cami"> 
     <div class="camisetas"> <h2>Camisetas Argentina <br>
-<div class="camiseta"><img class="boca" src="../img/boca.jpg"  alt="...">
-    <img class="river" src="../img/river.jpg"  alt="...">
-    <img class="san" src="../img/san lorenzo.jpg"  alt="...">
+<div class="camiseta"><img  src="../img/boca.jpg" class="boca"  alt="..."> 
+    <img class="river" src="../img/river.jpg"  alt="..."> 
+    <img class="san" src="../img/san lorenzo.jpg"  alt="..."> 
     <img class="independiente" src="../img/independiente.jpg"  alt="..."> 
-    <img class="racing" src="../img/racing.jpg"  alt="..."> </div> 
+    <img class="racing" src="../img/racing.jpg"  alt="...">  </div> 
 </h2>
     <h2>Camisetas Inglaterra <br>
-    <div class="remera">    <img class="arsenal" src="../img/Arsenal.jpg"  alt="">
-        <img class="chelsea" src="../img/Chelsea.jpg"  alt="">
-        <img class="liverpool" src="../img/liverpool.jpg" alt="">
-        <img class="burnley" src="../img/Burnley.jpg"  alt="">
+    <div class="remera">    <img class="arsenal" src="../img/Arsenal.jpg"  alt=""> 
+        <img class="chelsea" src="../img/Chelsea.jpg"  alt=""> 
+        <img class="liverpool" src="../img/liverpool.jpg" alt=""> 
+        <img class="burnley" src="../img/Burnley.jpg"  alt=""> 
         <img class="west" src="../img/West.jpg"  alt=""> </div> 
     </h2> 
-</div>  
+</div> 
    <h2>Camisetas España <br>  
-<div class="casaca"> <img class="barcelona" src="../img/barcelona.jpg" alt="">
-    <img class="real" src="../img/real.jpg" alt="">
-    <img class="rayo" src="../img/rayo.jpg" alt="">
-    <img class="bilbao" src="../img/bilbao.jpg" alt="">
-    <img class="atletico" src="../img/atletico.jpg" alt="">
+<div class="casaca"> <img class="barcelona" src="../img/barcelona.jpg" alt=""> 
+    <img class="real" src="../img/real.jpg" alt=""> 
+    <img class="rayo" src="../img/rayo.jpg" alt=""> 
+    <img class="bilbao" src="../img/bilbao.jpg" alt=""> 
+    <img class="atletico" src="../img/atletico.jpg" alt=""> 
 
 
 
