--- a/secciones/contacto.html
+++ b/secciones/contacto.html
@@ -31,7 +31,7 @@
                     <a href="promociones.html">Promociones</a> &nbsp;
                 </li>
                 <li>
-                    <a href="servicios.html">Servicios</a> &nbsp;
+                    <a href="servicios.html">>Amantes de las camisetas</a> &nbsp;
                 </li>
             </ul>
         </nav>
@@ -41,20 +41,23 @@
 <!--inicio form-->
     <form class="contact">
               <label for="nombre_apellido">Ingrese Nombre y Apellido</label>
-              <input type="text" name="nombre_apellido" /> 
+              <input type="text" size="21" name="nombre_apellido" /> 
               <label for="edad">Ingrese Edad</label>
-              <input type="text" name="edad" />
+              <input type="text" size="21" name="edad" />
+
+               
+
+              <div class="genero"> <div>Hombre
+              <input type="radio" name="sexo" value="hombre"> </div>
+              <div>Mujer
+              <input type="radio" name="sexo" value="mujer"> </div>
+              </div>
+              <div>Acepta terminos y condiciones
+              <input type="checkbox" name="acepta" value="1">
+            </div>
 
               <input type="submit" value="Enviar info"/>
-              <input type="reset" value="Borrar info"/> 
-
-              <div class="genero"> <div>Hombre</div>
-              <input type="radio" name="sexo" value="hombre">
-              <div>Mujer</div>
-              <input type="radio" name="sexo" value="mujer">
-              </div>
-              <div>Acepta terminos y condiciones</div>
-              <input type="checkbox" name="acepta" value="1">
+              <input type="reset" value="Borrar info"/>
 
     </form>
  <!--fin form-->
