Actualizacion del proyecto

--- a/secciones/promociones.html
+++ b/secciones/promociones.html
@@ -28,7 +28,7 @@
                     <a href="promociones.html">Promociones</a> &nbsp;
                 </li>
                 <li>
-                    <a href="servicios.html">>Amantes de las camisetas</a> &nbsp;
+                    <a href="servicios.html">Amantes de las camisetas</a> &nbsp;
                 </li>
             </ul>
         </nav>
