--- a/secciones/productos.html
+++ b/secciones/productos.html
@@ -32,7 +32,7 @@
                     <a href="promociones.html">Promociones</a> &nbsp;
                 </li>
                 <li>
-                    <a href="servicios.html">>Amantes de las camisetas</a> &nbsp;
+                    <a href="servicios.html">Amantes de las camisetas</a> &nbsp;
                 </li>
             </ul>
         </nav>
