--- a/secciones/contacto.html
+++ b/secciones/contacto.html
@@ -52,13 +52,15 @@
               <div>Mujer
               <input type="radio" name="sexo" value="mujer"> </div>
               </div>
-              <div>Acepta terminos y condiciones
-              <input type="checkbox" name="acepta" value="1">
-            </div>
+              
 
-              <input type="submit" value="Enviar info"/>
-              <input type="reset" value="Borrar info"/>
-
+            <label for="dudas y preguntas">Ingrese Dudas o Preguntas</label>
+            <input type="text" size="21" name="dudas_preguntas" /> 
+            <input type="submit" value="Enviar info"/>
+                  <input type="reset" value="Borrar info"/>
+                  <div>Acepta terminos y condiciones
+                    <input type="checkbox" name="acepta" value="1">
+                  </div>
     </form>
  <!--fin form-->
 
