Actualizacion del proyecto

--- a/secciones/servicios.html
+++ b/secciones/servicios.html
@@ -42,77 +42,79 @@
         <div class="accordion-item">
           <h2 class="accordion-header" id="headingOne">
             <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-              Remera Italiana del Mundial Corea-Japon 2022
+              REMERA ITALIANA DEL MUNDIAL COREA-JAPON 2002
             </button>
           </h2>
           <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
-            <div class="accordion-body">
+            <div class="accordion-body"> <img src="../img/Italia.jpg" alt=""> <br>
               <strong>Esta camiseta es probablemente la más icónica de este siglo dentro del universo de las selecciones nacionales porque Kappa, marca que la diseñó inspirándose en modelos clásicos pero apostando por un tejido innovador que se ajustaba al cuerpo, consiguió que media Europa paseara orgullosa la camiseta de la selección cuya estrella era el icono romano Francesco Totti.
 
                 Es de las pocas camisetas retro exitosas que no está asociada a un éxito del equipo que la lució, puesto que Italia cayó en octavos de final de aquel mundial. </strong>
             </div>
           </div>
-        </div>
+        </div> <br>
         <div class="accordion-item">
           <h2 class="accordion-header" id="headingTwo">
             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-              Remera de Holanda de la Eurocopa 1988
+              REMERA DE HOLANDA DE LA EUROCOPA 1988
             </button>
           </h2>
           <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
-            <div class="accordion-body">
+            <div class="accordion-body"> <img src="../img/Holanda.jpg" alt=""> <br>
               <strong>Desde la irrupción de Johan Cruyff en los 70, Países Bajos -Holanda para cualquier apasionado del fútbol de los 80- se convirtió en potencia futbolística europea. Y en la eurocopa celebrada en el año 1988 en la Alemania Federal se alzó con el título, liderada por Van Basten, Gullit y compañía, todos ellos enfundados en una camiseta con estampado psicodélico firmada por Adidas que es una de las favoritas de los coleccionistas.</strong>
             </div>
           </div>
-        </div>
+        </div> <br>
         <div class="accordion-item">
           <h2 class="accordion-header" id="headingThree">
             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-              Remera de Argentina del Mundial Mexico 1986
+              REMERA DE ARGENTINA DEL MUNDIAL MEXICO 1986
             </button>
           </h2>
           <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
-            <div class="accordion-body">
+            <div class="accordion-body"> <img  src="../img/Argentina 1986.jpg" alt=""> <br>
               <strong>Esta camiseta diseñada por la marca Le Coq Sportif no solo le permitio a la seleccion Argentina llevada adelante por Diego Armando Maradona coronarse campeón, sino que tambien fueron utilizadas para dos de los goles mas recordados de todos los tiempos: "La mano de dios" y "El mejor gol del Mundo", ambos realizados por Maradona a la seleccion Inglesa. </strong>
             </div>
           </div>
         </div>
-      </div>
+      </div>  <br>
+
+
       <div class="accordion-item">
-        <h2 class="accordion-header" id="headingThree">
-          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-            Remera de 
+        <h2 class="accordion-header" id="headingFour">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+            REMERA DE BRASIL DEL MUNDIAL MEXICO 1970
           </button>
         </h2>
         <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
-          <div class="accordion-body">
-            <strong> </strong>
+          <div class="accordion-body"> <img src="../img/Brasil (1).jpg" alt=""> <br>
+            <strong>En el Estadio Azteca se disputó una final con un tinte especial: la FIFA había dispuesto que el primer país que concretara tres Mundiales se quedaría con la copa para siempre. A la final llegaron Italia y Brasil, ambos con dos competencias ganadas. La copa se fue para Brasil, que bailó a los italianos en la final ganándole 4 - 1. </strong>
           </div>
         </div>
       </div>
-    </div>
+    </div> <br>
     <div class="accordion-item">
-      <h2 class="accordion-header" id="headingThree">
-        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-          Remera de
+      <h2 class="accordion-header" id="headingFive">
+        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
+          REMERA DE CROACIA EN EL MUNDIAL FRANCIA 1998
         </button>
       </h2>
       <div id="collapseFive" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
-        <div class="accordion-body">
-          <strong> </strong>
+        <div class="accordion-body"> <img src="../img/croacia (1).jpg" alt=""> <br>
+          <strong> El uniforme más reconocido: Aunque Croacia terminó tercero en el torneo de 1998, la pureza de diseño del uniforme del 2006 lo convierte en el mejor conjunto del país para la Copa Mundial. Si pides una descripción del uniforme de Croacia, la mayoría de las personas recordarán el de 2006, ya que permitió que el diseño a cuadros se luciera por sus propios méritos sin adornos innecesarios. </strong>
         </div>
       </div>
     </div>
-  </div>
+  </div> <br>
   <div class="accordion-item">
-    <h2 class="accordion-header" id="headingThree">
-      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-        Remera de 
+    <h2 class="accordion-header" id="headingSix">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseSix" aria-expanded="false" aria-controls="collapseSix">
+        REMERA DE ALEMANIA EN EL MUNDIAL ITALIA 1990
       </button>
     </h2>
     <div id="collapseSix" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
-      <div class="accordion-body">
-        <strong> </strong>
+      <div class="accordion-body"> <img src="../img/Alemania (1).jpg" alt=""> <br>
+        <strong> La clásica camiseta blanca vino acompañada con los colores de la bandera en modo de franjas muy llamativas, cubriendo todo el área del pecho y una parte en ambos hombros. Un diseño realmente inconfundible que se complementaba con un pantalón negro y medias blancas con rayas negras en la parte alta. Otra de las características es que los jugadores dejaron a un lado las camisetas ajustadas para privilegiarlas un poco más holgadas. Un uniforme muy llamativo y pomposo -con Lothar Matthäus, Rudi Völler o Andreas Brehme, por nombrar algunos- la cual logró, su tercera Copa del Mundo en Roma. </strong>
       </div>
     </div>
   </div>
