--- a/secciones/productos.html
+++ b/secciones/productos.html
@@ -72,27 +72,27 @@
 
 
 <figure class="cami"> 
-    <div class="camisetas"> <h2>Camisetas Argentina <br>
-<div class="camiseta"><img  src="../img/boca.jpg" class="boca"  alt="..."> 
-    <img class="river" src="../img/river.jpg"  alt="..."> 
-    <img class="san" src="../img/san lorenzo.jpg"  alt="..."> 
-    <img class="independiente" src="../img/independiente.jpg"  alt="..."> 
-    <img class="racing" src="../img/racing.jpg"  alt="...">  </div> 
+    <div class="camisetas"> <h2>Camisetas Italia <br>
+<div class="camiseta"><img  src="../img/Inter.jpg" class="boca"  alt="..."> 
+    <img class="river" src="../img/Juventus.jpg"> 
+    <img class="san" src="../img/Torino.jpg"> 
+    <img class="independiente" src="../img/Milan.jpg"> 
+    <img class="racing" src="../img/Napoli.jpg">  </div> 
 </h2>
-    <h2>Camisetas Inglaterra <br>
-    <div class="remera">    <img class="arsenal" src="../img/Arsenal.jpg"  alt=""> 
-        <img class="chelsea" src="../img/Chelsea.jpg"  alt=""> 
-        <img class="liverpool" src="../img/liverpool.jpg" alt=""> 
-        <img class="burnley" src="../img/Burnley.jpg"  alt=""> 
-        <img class="west" src="../img/West.jpg"  alt=""> </div> 
+    <h2>Camisetas Francia <br>
+    <div class="remera">    <img class="arsenal" src="../img/Monaco.jpg"  alt=""> 
+        <img class="chelsea" src="../img/PSG.jpg"  alt=""> 
+        <img class="liverpool" src="../img/Stade.jpg" alt=""> 
+        <img class="burnley" src="../img/OlympiqueLyion.jpg"  alt=""> 
+        <img class="west" src="../img/OlympiqueMar.jpg"  alt=""> </div> 
     </h2> 
 </div> 
-   <h2>Camisetas España <br>  
-<div class="casaca"> <img class="barcelona" src="../img/barcelona.jpg" alt=""> 
-    <img class="real" src="../img/real.jpg" alt=""> 
-    <img class="rayo" src="../img/rayo.jpg" alt=""> 
-    <img class="bilbao" src="../img/bilbao.jpg" alt=""> 
-    <img class="atletico" src="../img/atletico.jpg" alt=""> 
+   <h2>Camisetas Alemania <br>  
+<div class="casaca"> <img class="barcelona" src="../img/Herta.jpg" alt=""> 
+    <img class="real" src="../img/Koln.jpg" alt=""> 
+    <img class="rayo" src="../img/Borusia.jpg" alt=""> 
+    <img class="bilbao" src="../img/Union.jpg" alt=""> 
+    <img class="atletico" src="../img/Lever.jpg" alt=""> 
 
 
 </div>
