Actualizacion del proyecto

--- a/secciones/productos.html
+++ b/secciones/productos.html
@@ -19,20 +19,19 @@
         <nav>
             <ul>
                 <li>
-                    
-                    <a href="../index.html">Inicio</a> &nbsp;
+                    <a href="../index.html"><strong>Inicio</strong></a> &nbsp;
                 </li>
                 <li>
-                    <a href="contacto.html">Contacto</a> &nbsp;
+                    <a href="contacto.html"><strong>Contacto</strong></a> &nbsp;
                 </li>
                 <li>
-                    <a href="productos.html">Productos</a> &nbsp;
+                    <a href="productos.html"><strong>Productos</strong></a> &nbsp;
                 </li>
                 <li>
-                    <a href="promociones.html">Promociones</a> &nbsp;
+                    <a href="promociones.html"><strong>Promociones</strong></a> &nbsp;
                 </li>
                 <li>
-                    <a href="servicios.html">Amantes de las camisetas</a> &nbsp;
+                    <a href="servicios.html"><strong>Amantes de las camisetas</strong></a> &nbsp;
                 </li>
             </ul>
         </nav>
@@ -40,16 +39,16 @@
     <!--fin header-->
 
     <!--inicio figure-->
-    
+    <h2>Camisetas</h2> <br> <br>
 <figure class="cami"> 
-    <div class="camisetas"> <h2> Camisetas Argentina  <br> 
+    <div class="camisetas"> <h2>  Argentina  <br> 
 <div class="camiseta"><img  src="../img/boca.jpg" class="boca"  alt="..."> 
     <img class="river" src="../img/river.jpg"  alt="..."> 
     <img class="san" src="../img/san lorenzo.jpg"  alt="..."> 
     <img class="independiente" src="../img/independiente.jpg"  alt="..."> 
     <img class="racing" src="../img/racing.jpg"  alt="...">  </div> 
 </h2> 
-    <h2>Camisetas Inglaterra <br>
+    <h2> Inglaterra <br>
     <div class="remera">    <img class="arsenal" src="../img/Arsenal.jpg"  alt=""> 
         <img class="chelsea" src="../img/Chelsea.jpg"  alt=""> 
         <img class="liverpool" src="../img/liverpool.jpg" alt=""> 
@@ -57,29 +56,30 @@
         <img class="west" src="../img/West.jpg"  alt=""> </div> 
     </h2> 
 </div> 
-   <h2>Camisetas España <br>  
+   <h2> España <br>  
 <div class="casaca"> <img class="barcelona" src="../img/barcelona.jpg" alt=""> 
     <img class="real" src="../img/real.jpg" alt=""> 
     <img class="rayo" src="../img/rayo.jpg" alt=""> 
     <img class="bilbao" src="../img/bilbao.jpg" alt=""> 
     <img class="atletico" src="../img/atletico.jpg" alt=""> 
-
+</h2> 
 
 </div>
-</h2>
-</div>
+ 
+</div> 
+
 </figure>
 
 
 <figure class="cami"> 
-    <div class="camisetas"> <h2>Camisetas Italia <br>
+    <div class="camisetas"> <h2> Italia <br>
 <div class="camiseta"><img  src="../img/Inter.jpg" class="boca"  alt="..."> 
     <img class="river" src="../img/Juventus.jpg"> 
     <img class="san" src="../img/Torino.jpg"> 
     <img class="independiente" src="../img/Milan.jpg"> 
     <img class="racing" src="../img/Napoli.jpg">  </div> 
 </h2>
-    <h2>Camisetas Francia <br>
+    <h2> Francia <br>
     <div class="remera">    <img class="arsenal" src="../img/Monaco.jpg"  alt=""> 
         <img class="chelsea" src="../img/PSG.jpg"  alt=""> 
         <img class="liverpool" src="../img/Stade.jpg" alt=""> 
@@ -87,7 +87,7 @@
         <img class="west" src="../img/OlympiqueMar.jpg"  alt=""> </div> 
     </h2> 
 </div> 
-   <h2>Camisetas Alemania <br>  
+   <h2> Alemania <br>  
 <div class="casaca"> <img class="barcelona" src="../img/Herta.jpg" alt=""> 
     <img class="real" src="../img/Koln.jpg" alt=""> 
     <img class="rayo" src="../img/Borusia.jpg" alt=""> 
@@ -107,7 +107,7 @@
     <img src="../img/Camiseta-de-Argentina-2020-21 (1).jpg" class="card-img-top" alt="...">
     <div class="card-body">
       <h5 class="card-title">"La remera invicta"</h5>
-      <p class="card-text">Remera con la que la seleccion Argentina consiguio el invicto mas grande en su historia.</p>
+      <p class="card-text">Remera con la que la selección Argentina consiguio el invicto mas grande en su historia.</p>
       <a href="https://bolavip.com/ar/seleccion/Adios-vaquera-el-invicto-de-la-camiseta-celeste-y-blanca-de-Argentina-20220602-0028.html" class="btn btn-primary">Ver historia de la remera</a>
     </div>
   </div>
@@ -116,7 +116,7 @@
 
     <footer>
         <div class="red_social">
-            <h3>Siguenos!</h3>
+            <h3>Seguinos!</h3>
         <a href="https://www.facebook.com/dontstopargentina/" class="fa fa-facebook">Facebook:dontstopargentina</a>
         <a href="https://www.instagram.com/dontstopargentina/" class="fa fa-instagram">Instagram:dontstopargentina</a>
         <a href="https://www.twitter.com/dontstopargentina/" class="fa fa-twitter">Twitter:dontstopargentina</a>
