--- a/secciones/promociones.html
+++ b/secciones/promociones.html
@@ -16,28 +16,30 @@
         <nav>
             <ul>
                 <li>
-                    <a href="../index.html">Inicio</a> &nbsp;
+                    <a href="../index.html"><strong>Inicio</strong></a> &nbsp;
                 </li>
                 <li>
-                    <a href="contacto.html">Contacto</a> &nbsp;
+                    <a href="contacto.html"><strong>Contacto</strong></a> &nbsp;
                 </li>
                 <li>
-                    <a href="productos.html">Productos</a> &nbsp;
+                    <a href="productos.html"><strong>Productos</strong></a> &nbsp;
                 </li>
                 <li>
-                    <a href="promociones.html">Promociones</a> &nbsp;
+                    <a href="promociones.html"><strong>Promociones</strong></a> &nbsp;
                 </li>
                 <li>
-                    <a href="servicios.html">Amantes de las camisetas</a> &nbsp;
+                    <a href="servicios.html"><strong>Amantes de las camisetas</strong></a> &nbsp;
                 </li>
             </ul>
         </nav>
     </header>
     <!--fin header-->
     <ul class="list-group">
-       <h3> <li class="list-group-1">Este martes la remera de argentina tiene un 10% de descuento</li> <br>
-        <li class="list-group-2">Con la compra de dos o mas remeras tenes un 50% de descuento en una de ellas</li> <br>
-        <li class="list-group-3">Subi un historia a tu Instagram, mencionanos y gana un 10% de descuento</li> </h3>
+       <h3> <li class="list-group-1">10% de descuento en la remera de ARGENTINA todos los martes</li> <br>
+        <li class="list-group-2">50% de descuento en la SEGUNDA unidad </li> <br>
+        <li class="list-group-3">10% de descuento subiendo una historia a Instagram y etiquetandonos
+            
+        </li> </h3>
         
     </ul>
 
@@ -45,7 +47,7 @@
 
     <footer>
         <div class="red_social">
-            <h3>Siguenos!</h3>
+            <h3>Seguinos!</h3>
             <a href="https://www.facebook.com/dontstopargentina/" class="fa fa-facebook">Facebook:dontstopargentina</a>
             <a href="https://www.instagram.com/dontstopargentina/" class="fa fa-instagram">Instagram:dontstopargentina</a>
             <a href="https://www.twitter.com/dontstopargentina/" class="fa fa-twitter">Twitter:dontstopargentina</a>
