--- a/secciones/contacto.html
+++ b/secciones/contacto.html
@@ -19,19 +19,19 @@
         <nav>
             <ul>
                 <li>
-                    <a href="../index.html">Inicio</a> &nbsp;
+                    <a href="../index.html"><strong>Inicio</strong></a> &nbsp;
                 </li>
                 <li>
-                    <a href="contacto.html">Contacto</a> &nbsp;
+                    <a href="contacto.html"><strong>Contacto</strong></a> &nbsp;
                 </li>
                 <li>
-                    <a href="productos.html">Productos</a> &nbsp;
+                    <a href="productos.html"><strong>Productos</strong></a> &nbsp;
                 </li>
                 <li>
-                    <a href="promociones.html">Promociones</a> &nbsp;
+                    <a href="promociones.html"><strong>Promociones</strong></a> &nbsp;
                 </li>
                 <li>
-                    <a href="servicios.html">Amantes de las camisetas</a> &nbsp;
+                    <a href="servicios.html"><strong>Amantes de las camisetas</strong></a> &nbsp;
                 </li>
             </ul>
         </nav>
@@ -68,7 +68,7 @@
 
     <footer>
         <div class="red_social">
-            <h3>Siguenos!</h3>
+            <h3>Seguinos!</h3>
             <a href="https://www.facebook.com/dontstopargentina/" class="fa fa-facebook">Facebook:dontstopargentina</a>
             <a href="https://www.instagram.com/dontstopargentina/" class="fa fa-instagram">Instagram:dontstopargentina</a>
             <a href="https://www.twitter.com/dontstopargentina/" class="fa fa-twitter">Twitter:dontstopargentina</a>
