Actualizacion del proyecto

--- a/index.html
+++ b/index.html
@@ -31,20 +31,20 @@
         <nav>
             <ul>
                 <li>
-                    <a href="index.html"><strong>Inicio</strong></a> &nbsp;
+                    <a href="index.html"><strong>Inicio</strong></a> &nbsp; &nbsp; &nbsp;
                     </li>
                 <li>
-                    <a href="./secciones/contacto.html"><strong>Contacto</strong></a> &nbsp;
+                    <a href="./secciones/contacto.html"><strong>Contacto</strong></a> &nbsp; &nbsp; &nbsp;
                 </li>
                 <li>
-                    <a href="./secciones/productos.html"><strong>Productos</strong></a> &nbsp;
+                    <a href="./secciones/productos.html"><strong>Productos</strong></a> &nbsp; &nbsp; &nbsp;
                 </li>
                 <li>
-                    <a href="./secciones/promociones.html"><strong>Promociones</strong></a> &nbsp;
+                    <a href="./secciones/promociones.html"><strong>Promociones</strong></a> &nbsp; &nbsp; &nbsp;
                 </li>
                 <li>
-                    <a href="./secciones/servicios.html"><strong>Amantes de las camisetas</strong></a> &nbsp;
-                </li>
+                    <a href="./secciones/servicios.html"><strong>Amantes de las camisetas</strong></a> &nbsp; &nbsp; &nbsp;
+                </li> 
                 
                 
             </ul>
