--- a/secciones/contacto.html
+++ b/secciones/contacto.html
@@ -19,19 +19,19 @@
         <nav>
             <ul>
                 <li>
-                    <a href="../index.html"><strong>Inicio</strong></a> &nbsp;
+                    <a href="../index.html"><strong>Inicio</strong></a> &nbsp; &nbsp; &nbsp;
                 </li>
                 <li>
-                    <a href="contacto.html"><strong>Contacto</strong></a> &nbsp;
+                    <a href="contacto.html"><strong>Contacto</strong></a> &nbsp; &nbsp; &nbsp;
                 </li>
                 <li>
-                    <a href="productos.html"><strong>Productos</strong></a> &nbsp;
+                    <a href="productos.html"><strong>Productos</strong></a> &nbsp; &nbsp; &nbsp; 
                 </li>
                 <li>
-                    <a href="promociones.html"><strong>Promociones</strong></a> &nbsp;
+                    <a href="promociones.html"><strong>Promociones</strong></a> &nbsp; &nbsp; &nbsp;
                 </li>
                 <li>
-                    <a href="servicios.html"><strong>Amantes de las camisetas</strong></a> &nbsp;
+                    <a href="servicios.html"><strong>Amantes de las camisetas</strong></a> &nbsp; &nbsp; &nbsp;
                 </li>
             </ul>
         </nav>
@@ -40,7 +40,7 @@
 
 <!--inicio form-->
     <form class="contact">
-              <label for="nombre_apellido">Ingrese Nombre y Apellido</label>
+        <label for="nombre_apellido">Ingrese Nombre y Apellido</label>
               <input type="text" size="21" name="nombre_apellido" /> 
               <label for="edad">Ingrese Edad</label>
               <input type="text" size="21" name="edad" />
@@ -56,12 +56,11 @@
 
             <label for="dudas y preguntas">Ingrese Dudas o Preguntas</label>
             <input type="text" size="21" name="dudas_preguntas" /> 
-            <input type="submit" value="Enviar info"/>
+            <input type="submit" value="Enviar info"/> 
                   <input type="reset" value="Borrar info"/>
                   <div>Acepta terminos y condiciones
                     <input type="checkbox" name="acepta" value="1">
                   </div>
-    </form>
  <!--fin form-->
 
  <!--inicio footer-->
