--- a/secciones/productos.html
+++ b/secciones/productos.html
@@ -19,19 +19,19 @@
         <nav>
             <ul>
                 <li>
-                    <a href="../index.html"><strong>Inicio</strong></a> &nbsp;
+                    <a href="../index.html"><strong>Inicio</strong></a> &nbsp; &nbsp; &nbsp;
                 </li>
                 <li>
-                    <a href="contacto.html"><strong>Contacto</strong></a> &nbsp;
+                    <a href="contacto.html"><strong>Contacto</strong></a> &nbsp; &nbsp; &nbsp;
                 </li>
                 <li>
-                    <a href="productos.html"><strong>Productos</strong></a> &nbsp;
+                    <a href="productos.html"><strong>Productos</strong></a> &nbsp; &nbsp; &nbsp;
                 </li>
                 <li>
-                    <a href="promociones.html"><strong>Promociones</strong></a> &nbsp;
+                    <a href="promociones.html"><strong>Promociones</strong></a> &nbsp; &nbsp; &nbsp;
                 </li>
                 <li>
-                    <a href="servicios.html"><strong>Amantes de las camisetas</strong></a> &nbsp;
+                    <a href="servicios.html"><strong>Amantes de las camisetas</strong></a> &nbsp; &nbsp; &nbsp;
                 </li>
             </ul>
         </nav>
@@ -42,26 +42,26 @@
     <h2>Camisetas</h2> <br> <br>
 <figure class="cami"> 
     <div class="camisetas"> <h2>  Argentina  <br> 
-<div class="camiseta"><img  src="../img/boca.jpg" class="boca"  alt="..."> 
-    <img class="river" src="../img/river.jpg"  alt="..."> 
-    <img class="san" src="../img/san lorenzo.jpg"  alt="..."> 
-    <img class="independiente" src="../img/independiente.jpg"  alt="..."> 
-    <img class="racing" src="../img/racing.jpg"  alt="...">  </div> 
+<div class="camiseta"><img  src="../img/boca.jpg" class="boca"  alt="..."> $7800
+    <img class="river" src="../img/river.jpg"  alt="..."> $7800
+    <img class="san" src="../img/san lorenzo.jpg"  alt="..."> $7500
+    <img class="independiente" src="../img/independiente.jpg"  alt="..."> $7500 
+    <img class="racing" src="../img/racing.jpg"  alt="..."> $7500 </div> 
 </h2> 
     <h2> Inglaterra <br>
-    <div class="remera">    <img class="arsenal" src="../img/Arsenal.jpg"  alt=""> 
-        <img class="chelsea" src="../img/Chelsea.jpg"  alt=""> 
-        <img class="liverpool" src="../img/liverpool.jpg" alt=""> 
-        <img class="burnley" src="../img/Burnley.jpg"  alt=""> 
-        <img class="west" src="../img/West.jpg"  alt=""> </div> 
+    <div class="remera">    <img class="arsenal" src="../img/Arsenal.jpg"  alt=""> $8999
+        <img class="chelsea" src="../img/Chelsea.jpg"  alt=""> $8999
+        <img class="liverpool" src="../img/liverpool.jpg" alt=""> $8999
+        <img class="burnley" src="../img/Burnley.jpg"  alt=""> $7600
+        <img class="west" src="../img/West.jpg"  alt=""> $7600 </div> 
     </h2> 
 </div> 
    <h2> España <br>  
-<div class="casaca"> <img class="barcelona" src="../img/barcelona.jpg" alt=""> 
-    <img class="real" src="../img/real.jpg" alt=""> 
-    <img class="rayo" src="../img/rayo.jpg" alt=""> 
-    <img class="bilbao" src="../img/bilbao.jpg" alt=""> 
-    <img class="atletico" src="../img/atletico.jpg" alt=""> 
+<div class="casaca"> <img class="barcelona" src="../img/barcelona.jpg" alt=""> $9199
+    <img class="real" src="../img/real.jpg" alt=""> $9199
+    <img class="rayo" src="../img/rayo.jpg" alt=""> $7600
+    <img class="bilbao" src="../img/bilbao.jpg" alt=""> $8200
+    <img class="atletico" src="../img/atletico.jpg" alt=""> $8800
 </h2> 
 
 </div>
@@ -73,26 +73,26 @@
 
 <figure class="cami"> 
     <div class="camisetas"> <h2> Italia <br>
-<div class="camiseta"><img  src="../img/Inter.jpg" class="boca"  alt="..."> 
-    <img class="river" src="../img/Juventus.jpg"> 
-    <img class="san" src="../img/Torino.jpg"> 
-    <img class="independiente" src="../img/Milan.jpg"> 
-    <img class="racing" src="../img/Napoli.jpg">  </div> 
+<div class="camiseta"><img  src="../img/Inter.jpg" class="boca"  alt="..."> $8999
+    <img class="river" src="../img/Juventus.jpg"> $8999
+    <img class="san" src="../img/Torino.jpg"> $7600
+    <img class="independiente" src="../img/Milan.jpg"> $8999 
+    <img class="racing" src="../img/Napoli.jpg"> $8799 </div> 
 </h2>
     <h2> Francia <br>
-    <div class="remera">    <img class="arsenal" src="../img/Monaco.jpg"  alt=""> 
-        <img class="chelsea" src="../img/PSG.jpg"  alt=""> 
-        <img class="liverpool" src="../img/Stade.jpg" alt=""> 
-        <img class="burnley" src="../img/OlympiqueLyion.jpg"  alt=""> 
-        <img class="west" src="../img/OlympiqueMar.jpg"  alt=""> </div> 
+    <div class="remera">    <img class="arsenal" src="../img/Monaco.jpg"  alt=""> $8400
+        <img class="chelsea" src="../img/PSG.jpg"  alt=""> $9999
+        <img class="liverpool" src="../img/Stade.jpg" alt=""> $7600
+        <img class="burnley" src="../img/OlympiqueLyion.jpg"  alt=""> $8800 
+        <img class="west" src="../img/OlympiqueMar.jpg"  alt=""> $8800 </div> 
     </h2> 
 </div> 
    <h2> Alemania <br>  
-<div class="casaca"> <img class="barcelona" src="../img/Herta.jpg" alt=""> 
-    <img class="real" src="../img/Koln.jpg" alt=""> 
-    <img class="rayo" src="../img/Borusia.jpg" alt=""> 
-    <img class="bilbao" src="../img/Union.jpg" alt=""> 
-    <img class="atletico" src="../img/Lever.jpg" alt=""> 
+<div class="casaca"> <img class="barcelona" src="../img/Herta.jpg" alt=""> $7600 
+    <img class="real" src="../img/Koln.jpg" alt=""> $7600
+    <img class="rayo" src="../img/Borusia.jpg" alt=""> $8799
+    <img class="bilbao" src="../img/Union.jpg" alt=""> $7600
+    <img class="atletico" src="../img/Lever.jpg" alt=""> $8500
 
 
 </div>
