--- a/secciones/servicios.html
+++ b/secciones/servicios.html
@@ -19,19 +19,19 @@
         <nav>
             <ul>
                 <li>
-                    <a href="../index.html"><strong>Inicio</strong></a> &nbsp;
+                    <a href="../index.html"><strong>Inicio</strong></a> &nbsp; &nbsp; &nbsp; 
                 </li>
                 <li>
-                    <a href="contacto.html"><strong>Contacto</strong></a> &nbsp;
+                    <a href="contacto.html"><strong>Contacto</strong></a> &nbsp; &nbsp; &nbsp;
                 </li>
                 <li>
-                    <a href="productos.html"><strong>Productos</strong></a> &nbsp;
+                    <a href="productos.html"><strong>Productos</strong></a> &nbsp; &nbsp; &nbsp;
                 </li>
                 <li>
-                    <a href="promociones.html"><strong>Promociones</strong></a> &nbsp;
+                    <a href="promociones.html"><strong>Promociones</strong></a> &nbsp; &nbsp; &nbsp;
                 </li>
                 <li>
-                    <a href="servicios.html"><strong>Amantes de las camisetas</strong></a> &nbsp;
+                    <a href="servicios.html"><strong>Amantes de las camisetas</strong></a> &nbsp; &nbsp; &nbsp;
                 </li>
             </ul>
         </nav>
